# ClaroVoce

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CppwPy/: CMakeLists.txt  main.cpp
python/: testTTS.py
